@@ -4,6 +4,7 @@ Unreleased
 	* jug: better error detection for permission problems
 	* jug.unsafe: Add NoHash
 	* internal: convert to pyproject.toml for building
+	* jug.file_store: create files with better permissions
 
 Version 2.3.1 Sun 5 November 2023 by luispedro
 	* jug: update for Python 3.12
